# simple

./: CMakeLists.txt  README.org
data/: com.github.licorna.simpletodo.appdata.xml  com.github.licorna.simpletodo.desktop
debian/: control  copyright
src/: Application.vala  MainWindow.vala  OrgManager.vala  Stack.vala  TodoAddPopover.vala  TodoList.vala  Toolbar.vala  todosample.org
